{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 12,
  "lineage": "6759cbd9-03e5-9fb0-9932-42ed81b9b6a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363852138004:internet-gateway/igw-0ba3dc04afaab8087",
            "id": "igw-0ba3dc04afaab8087",
            "owner_id": "363852138004",
            "region": "eu-north-1",
            "tags": {
              "Name": "automated-deployment-igw"
            },
            "tags_all": {
              "Name": "automated-deployment-igw"
            },
            "vpc_id": "vpc-065903beb3f6d8b8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "igw-0ba3dc04afaab8087",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363852138004:route-table/rtb-073917c41f021c0a3",
            "id": "rtb-073917c41f021c0a3",
            "owner_id": "363852138004",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba3dc04afaab8087",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "automated-deployment-public-route-table"
            },
            "tags_all": {
              "Name": "automated-deployment-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-065903beb3f6d8b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "rtb-073917c41f021c0a3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f6cb4e02656c43",
            "region": "eu-north-1",
            "route_table_id": "rtb-073917c41f021c0a3",
            "subnet_id": "subnet-07d2e1f96204359f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "rtbassoc-0a2f6cb4e02656c43",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363852138004:security-group/sg-086812491294f90ca",
            "description": "Security group for the automated deployment server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086812491294f90ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "automated-deployment-web-sg",
            "name_prefix": "",
            "owner_id": "363852138004",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automated-deployment-web-sg"
            },
            "tags_all": {
              "Name": "automated-deployment-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065903beb3f6d8b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "sg-086812491294f90ca",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363852138004:subnet/subnet-07d2e1f96204359f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d2e1f96204359f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363852138004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "automated-deployment-public-subnet"
            },
            "tags_all": {
              "Name": "automated-deployment-public-subnet"
            },
            "vpc_id": "vpc-065903beb3f6d8b8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "subnet-07d2e1f96204359f1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:363852138004:vpc/vpc-065903beb3f6d8b8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a229a99769604b25",
            "default_route_table_id": "rtb-0f4fee18a5daf2238",
            "default_security_group_id": "sg-0122a1068f259c5ef",
            "dhcp_options_id": "dopt-07ad619fe7c1e6217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065903beb3f6d8b8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4fee18a5daf2238",
            "owner_id": "363852138004",
            "region": "eu-north-1",
            "tags": {
              "Name": "automated-deployment-vpc"
            },
            "tags_all": {
              "Name": "automated-deployment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "363852138004",
            "id": "vpc-065903beb3f6d8b8c",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}